--- a/public/static_page/branding_and_decor_blog.html
+++ b/public/static_page/branding_and_decor_blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Designing Experiences Through Branding & Décor</title>
+    <title>Designing Experiences Through Branding & Decor</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -25,11 +25,11 @@
 </head>
 <body>
 
-    <h1>Designing Experiences Through Branding & Décor</h1>
+    <h1>Designing Experiences Through Branding & Decor</h1>
 
     <p>
-        Branding and décor play a crucial role in shaping how people experience events, spaces, and organizations. 
-        As a Branding & Décor Associate, my focus lies in transforming ideas into visually engaging environments 
+        Branding and decor play a crucial role in shaping how people experience events, spaces, and organizations. 
+        As a Branding & Decor Associate, my focus lies in transforming ideas into visually engaging environments 
         that communicate a clear identity and leave a lasting impression.
     </p>
 
@@ -42,10 +42,10 @@
         the event.
     </p>
 
-    <h2>The Importance of Décor and Spatial Design</h2>
+    <h2>The Importance of Decor and Spatial Design</h2>
 
     <p>
-        Décor helps bring branding to life by shaping the physical space. From selecting appropriate colors and 
+        Decor helps bring branding to life by shaping the physical space. From selecting appropriate colors and 
         textures to arranging props and lighting, décor enhances the overall atmosphere. Working on college-level 
         events helped me understand how thoughtful spatial design can create immersive and memorable experiences.
     </p>
@@ -68,7 +68,7 @@
     </p>
 
     <p>
-        Through branding and décor, I aspire to design experiences that people remember—not just for how they 
+        Through branding and decor, I aspire to design experiences that people remember—not just for how they 
         looked, but for how they felt.
     </p>
 
